--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -13,6 +13,12 @@ body {
     background-color: #F5EBE0;
 }
 
+.purpleWrapper {
+    height: 90vh;
+    width: 50px;
+    background-color: #5e548e;
+    position: absolute;
+}
 
 #navBar {
     background-color: #5e548e;
@@ -77,7 +83,7 @@ p {
 }
 
 #footerNav {
-    height: 40vh;
+    margin-top: 20px;
     display: flex;
     align-items: flex-end;
     justify-content: center;
@@ -100,6 +106,19 @@ p {
     align-items: center;
 }
 
+@media screen and (max-width: 950px) {
+    .centerDiv {
+        height: 50vh;
+        justify-content: center;
+        flex-direction: column;
+        margin-top: 50px;
+    }
+
+    #footerNav {
+        height: 20vh;
+    }
+}
+
 @media screen and (max-width: 900px) {
     p {
         width: 70%;
@@ -107,6 +126,10 @@ p {
 
     .topIcon {
         width: 10%;
+    }
+
+    .purpleWrapper {
+        display: none;
     }
 }
 
