--- a/assets/css/path.css
+++ b/assets/css/path.css
@@ -1,16 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Silkscreen:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ysabeau:wght@200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Silkscreen', cursive;
+
 }
 
 body {
     background-color: #F5EBE0;
+}
+
+p {
+    font-family: 'Roboto', sans-serif;
+    font-size: 2.6rem;
+}
+
+.otherFont {
+    font-family: 'Silkscreen', cursive;
 }
 
 #firstPath {
@@ -19,12 +29,13 @@ body {
 }
 
 h1 {
+    font-family: 'Silkscreen', cursive;
     color: #F5EBE0;
     font-size: 2rem;
     rotate: 270deg;
     position: absolute;
     top: 130px;
-    left: -70px;
+    left: -50px;
 }
 
 #firstContainer {
@@ -57,8 +68,8 @@ h1 {
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
-    padding-left: 150px;
+    justify-content: space-around;
+    padding-left: 130px;
     font-size: 1.7rem;
 }
 
@@ -70,13 +81,14 @@ h1 {
 .footerDiv {
     rotate: 270deg;
     position: absolute;
-    left: -140px;
+    left: -130px;
     bottom: 210px
 }
 
 .footerDiv a {
     color: #F5EBE0;
     text-decoration: none;
+    font-family: 'Silkscreen', cursive;
 }
 
 .footerDiv a:hover {
@@ -141,7 +153,7 @@ h1 {
 
     #firstContainer p,
     #secondContainer p {
-        font-size: 1.6rem;
+        font-size: 2rem;
     }
 
     .iconDiv {
@@ -156,18 +168,33 @@ h1 {
         width: 5%;
     }
 
+    .otherFont {
+        font-size: 1.8rem;
+    }
+
+}
+
+@media screen and (max-width: 730px) {
+    p {
+        text-align: center;
+    }
 }
 
 @media screen and (max-width: 450px) {
 
     #firstContainer p,
     #secondContainer p {
-        font-size: 1.2rem;
+        font-size: 1.6rem;
         justify-content: space-around;
     }
 
     #secondContainer {
         margin-top: 0;
+    }
+
+    #firstContainer,
+    #secondContainer {
+        padding-left: 80px;
     }
 
     h1 {
