--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -21,7 +21,7 @@ body {
 }
 
 #navBar {
-    background-color: #5e548e;
+    background-color: #cdb4db;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
