--- a/assets/css/path.css
+++ b/assets/css/path.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Ysabeau:wght@200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Source+Code+Pro:wght@300&display=swap');
 
 * {
     margin: 0;
@@ -15,7 +16,7 @@ body {
 }
 
 p {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Source Code Pro', monospace;
     font-size: 2.6rem;
 }
 
@@ -35,7 +36,7 @@ h1 {
     rotate: 270deg;
     position: absolute;
     top: 130px;
-    left: -50px;
+    left: -70px;
 }
 
 #firstContainer {
