--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -24,9 +24,10 @@ body {
     background-color: #cdb4db;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    /* justify-content: center; */
     font-size: 2.7rem;
     height: 10vh;
+    padding-left: 30px;
 }
 
 #navBar .fakeButton {
@@ -47,6 +48,7 @@ body {
 #navBar a {
     color: #000;
     text-decoration: none;
+    text-align: left;
 }
 
 h1 {
@@ -122,6 +124,7 @@ p {
 @media screen and (max-width: 900px) {
     p {
         width: 70%;
+        font-size: 1.4rem;
     }
 
     .topIcon {
@@ -154,6 +157,7 @@ p {
     p {
         width: 100%;
         padding: 8px;
+        font-size: 1.2rem;
     }
 
     #footerNav {
