--- a/assets/css/path.css
+++ b/assets/css/path.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Source+Code+Pro:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 
 * {
     margin: 0;
@@ -16,7 +17,7 @@ body {
 }
 
 p {
-    font-family: 'Source Code Pro', monospace;
+    font-family: 'VT323', monospace;
     font-size: 2.6rem;
 }
 
