--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 }
 
 .containerBody {
-    background-image: url("../img/andras-vas-Bd7gNnWJBkU-unsplash.jpg");
+    background-image: url("../img/background-7234758_1280.png");
     background-size: cover;
     background-repeat: no-repeat;
 
