--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -24,7 +24,7 @@ body {
     background-color: #cdb4db;
     display: flex;
     align-items: center;
-    /* justify-content: center; */
+    justify-content: center;
     font-size: 2.7rem;
     height: 10vh;
     padding-left: 30px;
