--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -111,7 +111,7 @@ p {
         rotate: 270deg;
         position: absolute;
         left: -100px;
-        bottom: 161px
+        bottom: 161px;
     }
 
     .footerDiv a {
